# co-log-polysemy-formatting

./: .gitignore  .stylish-haskell.yaml  .travis.yml  CHANGELOG.md  LICENSE  README.md  co-log-polysemy-formatting.cabal  haskell-package-overrides.nix  nixpkgs.json  pkgname.nix  shell.nix
example/: Main.hs
src/Colog/Polysemy/: Formatting.hs
src/Colog/Polysemy/Formatting/: Color.hs  LogEnv.hs  Render.hs  ThreadTimeMessage.hs  WithLog.hs
