cabal-version:       2.4
name:                co-log-polysemy-formatting
version:             0.1.0.0
synopsis:            A fancy logging effect for Polysemy using formatting to format log messages.
description:         co-log-polysemy-formatting builds on the co-log-polysemy package, adding terminal colours, log severity, timestamps, callstacks, thread ids, and a flexible log format with good defaults. It also allows you to use the formatting library for formatting your log messages.
homepage:         https://github.com/AJChapman/co-log-polysemy-formatting/README.md
bug-reports:         https://github.com/AJChapman/co-log-polysemy-formatting/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Alex Chapman
maintainer:          alex@farfromthere.net
copyright:           2020 Alex Chapman
category:            Logging
extra-source-files:  CHANGELOG.md
                     README.md
tested-with:           GHC == 8.4.4
                     , GHC == 8.6.5
                     , GHC == 8.8.3
                     , GHC == 8.10.1

common deps
  build-depends:       base ^>=4.11.0.0

-- Warnings list list taken from
-- https://medium.com/mercury-bank/enable-all-the-warnings-
a0517bc081c3
-- Enable all warnings with -Weverything, then disable the ones
 we
-- don’t care about
  default-language:    Haskell2010
  ghc-options:         -Weverything
                       -Wno-all-missed-specialisations
                       -Wno-implicit-prelude
                       -Wno-missed-specialisations
                       -Wno-missing-exported-signatures
                       -Wno-missing-import-lists
                       -Wno-missing-local-signatures
                       -Wno-monomorphism-restriction
                       -Wno-missing-deriving-strategies
                       -Wno-safe
                       -Wno-unsafe
                       -fprint-potential-instances
  if impl(ghc >= 8.10)
    ghc-options:       -Wno-prepositive-qualified-module
                       -Wno-missing-safe-haskell-mode

library
  import: deps

  exposed-modules:     Colog.Polysemy.Formatting

source-repository head
  type:     git
  location: https://github.com/AJChapman/co-log-polysemy-formatting
